# LLM-benchmark

./: README.md  original.json  pyproject.toml  serve-proxy.py
specs/: spec-benchmark-creation.md  specs-prompt-capture-2.md  specs-prompt-capture-full.md  specs-prompt-capture.md
src/: print_to_json.py  serve-proxy.py  serve_prompt_capture.py
tests/: get_llm_internal_structure.py
