[project]
name = "llm-benchmark"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.42.0",
    "fastapi>=0.115.7",
    "llm>=0.20",
    "ollama>=0.4.5",
    "openai>=1.59.6",
    "pydantic>=2.10.5",
    "uvicorn>=0.34.0",
]
